First cut of chat UI

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,5 +1,5 @@
 <!-- Languages column -->
-<div class="row"
+<div class="row chat-window"
   data-controller="issues-messages">
   <div class="col-1 bg-dark p-3 border-right border-black d-flex justify-content-center">
     <div class="d-flex justify-content-center">
@@ -17,7 +17,7 @@
     </div>
   </div>
   <!-- Issue messages column -->
-  <div class="col-7"
+  <div class="col-8 chatroom-border"
         data-issues-messages-target="messages">
     <%= render "issues/show" %>
   </div>
