--- a/app/assets/stylesheets/components/_issue_list.scss
+++ b/app/assets/stylesheets/components/_issue_list.scss
@@ -1,5 +1,6 @@
 .issue-list {
-  overflow-y: scroll;
+  overflow-y: auto;
+  height: 80vh;
   padding: 10px;
   background-color: #f9f9f9;
 }
@@ -12,7 +13,6 @@
 }
 
 .issue-column {
-  overflow-y: scroll;
   padding: 10px;
 }
 
