--- a/app/assets/stylesheets/components/_message_column.scss
+++ b/app/assets/stylesheets/components/_message_column.scss
@@ -3,10 +3,8 @@ body {
 }
 
 .message-list {
-  height: 600px;
-  overflow: auto;
   margin-top: 10px;
-  margin-bottom: 10px
+  margin-bottom: 10px;
 }
 
 .message {
@@ -115,4 +113,9 @@ body {
   background-color: #f9f9f9;
   border-color: #bbb;
   color: #555;
+}
+
+.message-input {
+  position: sticky;
+  top: 0;
 }
