Fixed sticky chat

--- a/app/assets/stylesheets/components/_message_column.scss
+++ b/app/assets/stylesheets/components/_message_column.scss
@@ -4,9 +4,9 @@ body {
 
 .message-list {
   overflow: scroll;
-  height:75vh;
+  height:65vh;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
 }
 
 .message {
@@ -40,6 +40,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 
 .message-content:hover {
@@ -75,7 +76,11 @@ body {
   line-height: 1.5;
 }
 
-.message-actions {
+.message-content .message-actions {
+  position: absolute;
+  right: 100px;
+  top: -24px;
+  width: 80px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -121,8 +126,9 @@ body {
   position: sticky;
   top: 0;
   margin-right: 8px;
+  margin-top: 8px;
 }
 
 .message-input-bar {
-  margin-right: 40px;
+  margin-right: 16px;
 }
