--- a/app/views/messages/_message.erb
+++ b/app/views/messages/_message.erb
@@ -1,4 +1,4 @@
-<div class="message">
+<div class="message mt-4">
   <div class="message-content">
     <div class="message-header">
       <div class="message-img">
@@ -20,7 +20,7 @@
     <div class="message-actions">
       <button type="button" class="btn btn-secondary">Like</button>
       <button type="button" class="btn btn-secondary">Reply</button>
-      <button type="button" class="btn btn-primary">Answer with AI</button>
+      <button type="button" class="btn btn-primary">AI</button>
     </div>
   </div>
 </div>
