--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -17,7 +17,7 @@
     </div>
   </div>
   <!-- Issue messages column -->
-  <div class="col-8 chatroom-border"
+  <div class="col-8"
         data-issues-messages-target="messages">
     <%= render "issues/show" %>
   </div>
