--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -12,9 +12,11 @@
   </div>
   <div class="col-8 chatroom-border">
     <div class="container">
-      <div data-controller="issue-subscription" data-issue-subscription-issue-id-value="<%= @issue.id %>">
-        <h3 class="mt-2">#<%= @issue.title %></h3>
-        <div class="message-list">
+      <div data-controller="issue-subscription"
+            data-issue-subscription-issue-id-value="<%= @issue.id %>"
+            class="mt-2">
+        <h3 class="mt-4">#<%= @issue.title %></h3>
+        <div class="message-list mt-3">
           <div class="messages" data-issue-subscription-target="messages">
             <% @issue.messages.each do |message| %>
               <%= render "messages/message", message: message %>
