--- a/app/views/issues/_index.html.erb
+++ b/app/views/issues/_index.html.erb
@@ -1,5 +1,8 @@
 <div class="w-100 position-relative">
-  <h3>Open questions</h3>
+  <div class="issue-top">
+    <h3>Open questions</h3>
+    <%= link_to "Create new issue", new_channel_issue_path(@channel), class: "create-new" %>
+  </div>
   <div class="issue-list">
     <% @issues.each do |issue| %>
       <div class="issue"
@@ -9,5 +12,4 @@
       </div>
     <% end %>
   </div>
-  <%= link_to "Create new issue", new_channel_issue_path(@channel), style: "display: block; position: absolute; text-align: center; bottom:0; left: 50%; transform: translateX(-50%);" %>
 </div>
