--- a/app/views/issues/_show.erb
+++ b/app/views/issues/_show.erb
@@ -5,8 +5,10 @@
   </div>
   <% else %>
     <div class="container">
-      <h4 class="mt-3"># <%= @issue.title.downcase %></h4>
-      <p> <%= @issue.description %></p>
+      <div class="message-top">
+        <h4 class="mt-3"># <%= @issue.title.downcase %></h4>
+        <p> <%= @issue.description %></p>
+      </div>
       <div class="message-list mt-3">
         <div
           data-controller="issue-subscription"
