--- a/app/views/messages/_message.erb
+++ b/app/views/messages/_message.erb
@@ -20,7 +20,7 @@
     <div class="message-actions" id="pinColor">
       <button type="button" class="btn btn-secondary">Like</button>
       <button type="button" class="btn btn-secondary">Reply</button>
-      <button type="button" class="btn btn-primary">AI</button>
+      <button type="button" class="btn btn-primary">Hint</button>
       <button type="button" class="btn btn-primary" id="pinned" data-action="click->mark-complete#markComplete">This answer helped me 👍</button>
     </div>
   </div>
