Added batch number field to signup form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,6 +25,10 @@
         <%= f.input :password_confirmation,
                     required: true,
                     input_html: { autocomplete: "new-password" } %>
+        <%= f.input :batch,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "batch number" }%>
       </div>
 
       <div class="form-actions">
