--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
   <!-- Issues list column -->
-  <div class="col-3 bg-light issue-column">
+  <div class="col-3 issue-column">
       <div class="row mt-2 h-100">
         <%= render "issues/index" %>
         <!-- The active issue class will be assigned based on click - stimulus controller required, attach controller to list -->
