Added nickname field to signup page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,15 +9,19 @@
         <%= f.input :email,
                     required: true,
                     autofocus: true,
-                    input_html: { autocomplete: "email" }%>
+                    input_html: { autocomplete: "email" } %>
         <%= f.input :first_name,
                     required: true,
                     autofocus: true,
-                    input_html: { autocomplete: "first name" }%>
+                    input_html: { autocomplete: "first name" } %>
         <%= f.input :last_name,
                     required: true,
                     autofocus: true,
-                    input_html: { autocomplete: "last name" }%>
+                    input_html: { autocomplete: "last name" } %>
+        <%= f.input :nickname,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "nickname" } %>
         <%= f.input :password,
                     required: true,
                     hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -28,7 +32,7 @@
         <%= f.input :batch,
                     required: true,
                     autofocus: true,
-                    input_html: { autocomplete: "batch number" }%>
+                    input_html: { autocomplete: "batch number" } %>
       </div>
 
       <div class="form-actions">
