--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,8 +1,8 @@
 <!-- Languages column -->
 <div class="row chat-window"
   data-controller="issues-messages">
-  <div class="col-1 bg-dark p-3 border-right border-black d-flex justify-content-center lang-column">
-    <div class="d-flex justify-content-center">
+  <div class="col-1 border-right border-black lang-column d-flex justify-content-center pt-3">
+    <div class="d-flex">
       <%= render "channels/index", channels: @channels %>
     </div>
   </div>
@@ -14,7 +14,7 @@
       </div>
   </div>
   <!-- Issue messages column -->
-  <div class="col-8"
+  <div class="col-8 bg-light"
         data-issues-messages-target="messages">
     <%= render "issues/show" %>
   </div>
