--- a/app/views/issues/_show.erb
+++ b/app/views/issues/_show.erb
@@ -5,9 +5,9 @@
   </div>
   <% else %>
     <div class="container">
-      <div class="message-top">
-        <h4 class="mt-3"># <%= @issue.title.downcase %></h4>
-        <p> <%= @issue.description %></p>
+      <div class="">
+        <h4 class="issue-title-header mt-3 m-2 pt-4 px-2"># <%= @issue.title.downcase %></h4>
+        <p class="m-2 px-2"> <%= @issue.description %></p>
       </div>
       <div class="message-list mt-3">
         <div
