--- a/app/views/issues/_index.html.erb
+++ b/app/views/issues/_index.html.erb
@@ -1,5 +1,5 @@
 <div class="w-100 position-relative">
-  <div class="issue-top">
+  <div class="issue-top mx-3">
     <h3>Open questions</h3>
     <%= link_to "Create new issue", new_channel_issue_path(@channel), class: "create-new" %>
   </div>
