Added styling to chatroom messages

--- a/app/assets/stylesheets/components/_message_column.scss
+++ b/app/assets/stylesheets/components/_message_column.scss
@@ -138,6 +138,11 @@ body {
   right: -12x;
   bottom: -12px;
   margin-top: 10px;
+  display: flex;
+}
+
+.message-helpful-child {
+  margin: 5px;
 }
 
 .message-helpful .btn {
