--- a/app/views/issues/_index.html.erb
+++ b/app/views/issues/_index.html.erb
@@ -1,9 +1,18 @@
 <div class="issue-list">
-  <% @issues.each do |issue| %>
-    <div class="issue"
-          data-controller="issue-subscription"
-          data-channel-subscription-channel-id-value="<%= issue.id %>">
-      🎠 <%= link_to issue.title, channel_issue_path(issue.channel, issue), data: {action: "click->issues-messages#render", issues_messages_target: "issueLink"} %>
-    </div>
-  <% end %>
+  <div data-controller="search-issues">
+    <%= form_with url: channel_issues_path(@channel), method: :get, html: {class:"d-flex search-bar", data: {search_issues_target: "form"}} do |form| %>
+      <%= form.text_field :query,
+        placeholder: "Filter issues",
+        class: "form-control",
+        value: params[:query],
+        data: {
+          search_issues_target: "input",
+          action: "keyup->search-issues#update"
+        } %>
+      <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
+        <i class="fas fa-search"></i>
+      <% end %>
+    <% end %>
+    <%= render "issues/list", issues: @issues %>
+  </div>
 </div>
