--- a/app/views/messages/_message.erb
+++ b/app/views/messages/_message.erb
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="message-helpful">
-      <p><strong>+ <strong><a id="likes-<%= message.id %>">0</a></p>
+      <p><strong>+<a id="likes-<%= message.id %>">0</a></strong></p>
     </div>
     <div class="message-actions" id="pinColor">
       <%# <button type="button" class="btn btn-secondary">Reply</button> %>
