--- a/app/views/issues/_index.html.erb
+++ b/app/views/issues/_index.html.erb
@@ -4,7 +4,7 @@
       <h4>Open questions</h4>
       <%= link_to "Create new issue", new_channel_issue_path(@channel), class: "create-new" %>
     </div>
-    <%= form_with url: channel_issues_path(@channel), method: :get, html: {class:"d-flex search-bar", data: {search_issues_target: "form"}} do |form| %>
+    <%= form_with url: channel_issues_path(@channel), method: :get, html: {class:"d-flex search-bar mx-3", data: {search_issues_target: "form"}} do |form| %>
       <%= form.text_field :query,
         placeholder: "Filter issues",
         class: "form-control",
