Fixed issue creatoin form

--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -12,7 +12,7 @@
         <% end %>
       <% else %>
         <%= simple_form_for [@issue] do |f| %>
-          <%= f.collection_radio_buttons :channel_id, [[1,"Ruby"], [2,"Rails"], [3, "HTML"], [4, "CSS"], [5, "JS"], [6, "Stimulus"], [7, "React"]], :label => "Which language are you having trouble with?",  %>
+          <%= f.input :channel_id, as: :radio_buttons, collection: Channel.all.pluck(:name, :id), label: "Which language are you having trouble with?" %>
           <%= f.input :title, :label => "Describe what you're struggling with in a few words." %>
           <%= f.input :description, :label => "Add some more detail. The more information you can give, the better.", :input_html => { :class => 'form-input' } %>
           <%= f.input :code_block, :label => "Copy/paste in any code here that will be helpful to resolve your issue.", :input_html => { :class => 'form-input' } %>
