--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
             <%= link_to "Create an issue", new_issue_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Browse channels", channel_path(1), class: "nav-link" %>
+            <%= link_to "Browse channels", channel_path(Channel.first), class: "nav-link" %>
           </li>
           <i class="fa-solid fa-sun"></i>
           <label class="switch">
