Fix margin issue

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,5 +1,5 @@
 <!-- Languages column -->
-<div class="row chat-window"
+<div class="row chat-window me-0"
   data-controller="issues-messages">
   <div class="col-1 border-right border-black lang-column d-flex justify-content-center pt-3">
     <div class="d-flex">
