--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,12 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "/", class: "navbar-brand" do %>
-      <%# <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-      <div class="logotype"><span><strong>Le</strong></span>Chariot</div>
+  <div class="logo-title-nav">
+    <div class="child-nav">
+      <%= link_to "/", class: "navbar-brand" do %>
+        <%= image_tag asset_path('logo.png') %>
+    </div>
+        <div class="logotype"><span><strong>Le </strong>Chariot</span></div>
+  </div>
     <% end %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
