--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -3,7 +3,7 @@
   data-controller="issues-messages">
   <div class="col-1 border-right border-black lang-column d-flex justify-content-center pt-3">
     <div class="d-flex">
-      <%= render "channels/index", channels: @channels %>
+      <%= render "channels/index", channels: @channels, channel: @channel %>
     </div>
   </div>
   <!-- Issues list column -->
