--- a/app/assets/stylesheets/components/_channel_column.scss
+++ b/app/assets/stylesheets/components/_channel_column.scss
@@ -10,12 +10,20 @@
   width: 40px;
   height: 40px;
   border-radius: 10px;
-  filter: grayscale(20%)
+  opacity: 60%;
+  filter: grayscale(50%);
+  transition: all 0.05s ease-in-out;
+  cursor: pointer;
+
+  &.active {
+    opacity: 100%;
+    filter: grayscale(0%);
+  }
 }
 
 .channel-img:hover {
-  opacity: 70%;
-  cursor: pointer;
+  opacity: 100%;
+  filter: grayscale(0%);
 }
 
 .channel-item-div {
@@ -24,10 +32,12 @@
   border: 1px solid #ddd;
   border-radius: 10px;
   margin-bottom: 10px;
+  transition: all 0.3s ease-in-out;
 }
 
 .channel-item-div:hover {
   translate: (4px);
+
 }
 
 .dark-mode {
@@ -35,8 +45,4 @@
     background-color: #3c4043;
     border: 1px solid #5f6368;
   }
-}
-
-.channel-img.active {
-  border: 1px solid $orange;
 }
