--- a/app/views/issues/_show.erb
+++ b/app/views/issues/_show.erb
@@ -1,13 +1,14 @@
 <div class="issue-show">
   <% if @issue.nil?  %>
-  <div class="container">
-    <h3>No issues here</h3>
-  </div>
+    <div class="container">
+      <h3>No issues here</h3>
+    </div>
   <% else %>
     <div class="container">
       <div class="">
         <h4 class="issue-title-header mt-3 m-2 pt-4 px-2"># <%= @issue.title.downcase %></h4>
         <p class="m-2 px-2"> <%= @issue.description %></p>
+        <p class="m-2 px-2"> <%= @issue.code_block %></p>
       </div>
       <div class="message-list mt-3">
         <div
