--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -45,10 +45,27 @@
           <li>Include your environment. If you're seeing an error message, copy/paste it in.</li>
         </ul>
       </div>
-      <button class="btn btn-outline-primary mb-4">Help me refine my issue</button>
-      <div class="p-4 border rounded chat-hint-box">
-        <p>ChadGPT hint to come here...</p>
-      </div>
+      <%= form_for :ai_request, url: ai_request_path, method: :post, remote: true do |f| %>
+  <%= f.hidden_field :uuid, value: @uuid %>
+  <div class="form-group">
+    <%= f.text_area :prompt, class:"form-control" %>
+  </div>
+  <%= f.select :ai_model, options_for_select([
+        [ "Ada $0.0016 / 1K tokens", "ada" ],
+        [ "Babbage $0.0024 / 1K tokens", "babbage" ],
+        [ "Curie $0.0120 / 1K tokens", "curie" ],
+        [ "Davinci $0.1200 / 1K tokens", "davinci" ],
+        [ "DALL-E 1024×1024	$0.020 / image", "image/1024x1024"],
+        [ "DALL-E 512×512	$0.018 / image", "image/512x512"],
+        [ "DALL-E 256×256	$0.016 / image", "image/256x256"],
+    ], "davinci"), {}, class:"form-control" %>
+  <%= f.submit "Help me refine my issue", class:"btn btn-primary" %>
+<% end %>
+<div class="p-4 border rounded chat-hint-box">
+  <% if @generated_idea %>
+    <%= content_tag(:div, @generated_idea) %>
+  <% end %>
+</div>
     </div>
   </div>
 </div>
