Add a new profile show page per user

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -48,3 +48,12 @@
   font-size: 2rem;
   font-weight: bold;
 }
+
+.issues-card-link{
+  text-decoration: none;
+  color: #181F25;
+}
+
+.issues-card-link:hover {
+  color: #181F25;
+}
