--- a/app/assets/stylesheets/components/_message_column.scss
+++ b/app/assets/stylesheets/components/_message_column.scss
@@ -63,6 +63,16 @@ body {
   margin-right: 5px;
 }
 
+.message-name a {
+  text-decoration: none;
+  color: black;
+}
+
+.message-name a:hover {
+  text-decoration: none;
+  color: $orange;
+}
+
 .message-time {
   font-size: 12px;
   color: #999;
