Much nicer github login and sign-up forms

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,8 +10,9 @@
 @import "falling_shapes";
 @import "footer";
 @import "form_legend_clear";
+@import "issues_form";
 @import "issue_list";
+@import "login";
 @import "message_column";
 @import "message";
 @import "navbar";
-@import "issues_form";
