--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,22 @@
 <div class="container mt-4 pt-4 col-6">
-  <div class="row">
+  <div class="row mb-2">
     <h2>Sign up</h2>
-
+    <div class="github mt-2 mb-2">
+      <%- if devise_mapping.omniauthable? %>
+        <%- resource_class.omniauth_providers.each do |provider| %>
+          <%= button_to omniauth_authorize_path(resource_name, provider),
+                        data: { turbo: false },
+                        :class => "btn btn-primary col-12" do %>
+                          Sign up with GitHub <i class="fa-brands fa-github"></i>
+                        <% end %>
+        <% end %>
+      <% end %>
+    </div>
+    <div class="row mx-0 my-2">
+      <div class="col"><hr></div>
+      <div class="col-auto">or</div>
+      <div class="col"><hr></div>
+    </div>
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
       <%= f.error_notification %>
 
@@ -36,7 +51,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+        <%= f.button :submit, "Sign up", :class => "btn btn-primary col-12" %>
       </div>
     <% end %>
     <div class="py-4">
