Changed button colour

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,8 @@
         <div class="btn btn-primary mt-4">
           <%= link_to 'Browse channels', channel_path(Channel.first), :class => "btn" %>
         </div>
-        <div class="btn btn-primary mt-4">
-          <%= link_to 'Get helped', new_issue_path, :class => "btn" %>
+        <div class="btn btn-outline-primary mt-4">
+          <%= link_to 'Get help', new_issue_path, :class => "btn" %>
         </div>
       </div>
   <div class="falling-shapes align-items-center flex-grow-1 mt-auto">
