--- a/app/assets/stylesheets/components/_issue_list.scss
+++ b/app/assets/stylesheets/components/_issue_list.scss
@@ -1,7 +1,6 @@
 .issue-list {
   overflow-y: auto;
   height: 90vh;
-  padding: 10px;
   overflow-x: hidden;
 }
 
@@ -45,9 +44,15 @@
 
 .issue {
   display: block;
-  padding: 4px;
+  padding-left: 7px;
+  padding-right: 7px;
+  padding-bottom: 4px;
+  padding-top: 4px;
   transition: 0.2s;
   color: $purple;
+  font-size: 14px;
+  margin-bottom: 3px;
+  border: 1px solid #F2F2F2;
 }
 
 .issue a {
@@ -61,14 +66,15 @@
 }
 
 .issue.active {
-  background-color: rgba(98, 98, 98, 0.1);
+  background-color: #FDEEE6;
   border-radius: 4px;
-  font-weight: bold;
   color: #333;
+  border: 1px solid $primary;
 }
 
 .issue:hover {
   background-color: rgba(98, 98, 98, 0.1);
+  border-radius: 4px;
   cursor: pointer;
 }
 
@@ -96,7 +102,24 @@
 }
 
 .issue-title-header {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
   color: $orange;
+}
+
+.fa-code {
+  color: grey;
+  font-size: 12px;
+}
+
+.search-icon {
+  border: solid 1px $primary;
+  border-radius: 3px;
+  margin-left: 7px;
+  background-color: none;
+}
+
+
+.accordion {
+  background-color: black !important;
 }
