--- a/app/views/issues/_list.html.erb
+++ b/app/views/issues/_list.html.erb
@@ -3,7 +3,7 @@
     <div class="issue mx-3"
           data-controller="issue-subscription"
           data-channel-subscription-channel-id-value="<%= issue.id %>">
-      🎠 <%= link_to issue.title, channel_issue_path(issue.channel, issue), data: {action: "click->issues-messages#render", issues_messages_target: "issueLink"} %>
+      <i class="fa-solid fa-code"></i> <%= link_to issue.title, channel_issue_path(issue.channel, issue), data: {action: "click->issues-messages#render", issues_messages_target: "issueLink"} %>
     </div>
   <% end %>
 </div>
