--- a/app/views/messages/_message.erb
+++ b/app/views/messages/_message.erb
@@ -14,11 +14,8 @@
         <small>
           <strong><%= message.user.nickname %></strong>
         </small>
-        <p><%= message.content %></p>
+        <div class="trix-content"><%= message.content %></div>
       </div>
-    </div>
-    <div class="message-helpful">
-      <p><strong>+<a id="likes-<%= message.id %>">0</a></strong></p>
     </div>
     <div class="message-actions" id="pinColor">
       <%# <button type="button" class="btn btn-secondary">Reply</button> %>
@@ -26,23 +23,24 @@
         data-controller="confetti"
         data-confetti-follow-value="false"
         data-action="click->confetti#spray"
-        data-confetti-animation-value="basic">👍</a></button>
-
+          data-confetti-animation-value="basic">
+          <strong class="">👍 +<a id="likes-<%= message.id %>">0</a></strong>
+        </a></button>
       <%# Clicking like %>
-       <script type="text/javascript">
-
-    var clicks = 0;
-    function hello(likesId, messageId) {
-      var clicksElement = document.getElementById(likesId);
-      var clicks = parseInt(clicksElement.innerHTML);
-      clicksElement.innerHTML = clicks + 1;
-      var xhr = new XMLHttpRequest();
-      xhr.open("POST", "/like/" + messageId);
-      xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-      xhr.send(JSON.stringify({ message_id: messageId }));
-    };
-    </script>      <button type="button" class="btn btn-primary">Hint</button>
-
+      <script type="text/javascript">
+        var clicks = 0;
+        function hello(likesId, messageId) {
+          var clicksElement = document.getElementById(likesId);
+          var clicks = parseInt(clicksElement.innerHTML);
+          clicksElement.innerHTML = clicks + 1;
+          var xhr = new XMLHttpRequest();
+          xhr.open("POST", "/like/" + messageId);
+          xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+          xhr.send(JSON.stringify({ message_id: messageId }));
+        };
+              //
+      </script>
+      <%# <button type="button" class="btn btn-primary">Hint</button> %>
     </div>
   </div>
 </div>
