Like counter at bottom of message

--- a/app/views/messages/_message.erb
+++ b/app/views/messages/_message.erb
@@ -13,6 +13,10 @@
       <div id="message-<%= message.id %>">
         <div class="trix-content"><%= message.content %></div>
       </div>
+      <br>
+      <div>
+        <strong><p>Message like count: <%= message.favourites.count %></p></strong>
+      </div>
     </div>
     <div class="message-actions" id="pinColor">
       <% unless current_user.favourite_messages.include?(message) %>
