--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -14,7 +14,7 @@
     </div>
   </div>
   <!-- Issue messages column -->
-  <div class="col-8 chat-message-column flex-grow-1"
+  <div class="col-8 flex-grow-1"
         data-issues-messages-target="messages">
     <%= render "issues/show" %>
   </div>
