--- a/app/views/issues/_show.erb
+++ b/app/views/issues/_show.erb
@@ -1,61 +1,62 @@
-<% if @issue.nil?  %>
-  <div class="p-4">
-    <h3>No issues here</h3>
-    <p>Be the first one to create issues in this channel.</p>
-  </div>
-<% else %>
-  <div class="accordion accordion-flush" id="accordionFlushExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="flush-headingOne">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-          <div>
-            <h4 class="issue-title-header mt-1"># <%= @issue.title.downcase %></h4>
-            <p class="text-muted issue-suggestion">Click here to see a detailed description of the issue</p>
-          </div>
-        </button>
-      </h2>
-      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">
-          <h6>Detailed issue description:</h6>
-          <div>
-            <%= @issue.description %>
-          </div>
-          <% if @issue.code_block.present? %>
-            <h6>Related code:</h6>
-            <div class="border rounded p-3 related-code-block">
-              <code>
-                <div> <%= @issue.code_block %></div>
-              </code>
+<div  class="chat-message-column" data-controller="issue-subscription"
+      data-issue-subscription-issue-id-value="<%= @issue.id %>">
+  <% if @issue.nil?  %>
+    <div class="p-4">
+      <h3>No issues here</h3>
+      <p>Be the first one to create issues in this channel.</p>
+    </div>
+  <% else %>
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            <div>
+              <h4 class="issue-title-header mt-1"># <%= @issue.title.downcase %></h4>
+              <p class="text-muted issue-suggestion">Click here to see a detailed description of the issue</p>
             </div>
-          <% end %>
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <h6>Detailed issue description:</h6>
+            <div>
+              <%= @issue.description %>
+            </div>
+            <% if @issue.code_block.present? %>
+              <h6>Related code:</h6>
+              <div class="border rounded p-3 related-code-block">
+                <code>
+                  <div> <%= @issue.code_block %></div>
+                </code>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="message-list border-top border-bottom">
-    <% if @issue.messages.empty? %>
-      <h6>No replies have been posted to this issue thread.</h6>
-      <p>Be the first one to help the student!</p>
-    <% else %>
-      <div
-      data-controller="issue-subscription"
-      data-issue-subscription-issue-id-value="<%= @issue.id %>">
-        <div class="messages" data-issue-subscription-target="messages">
+    <div class="message-list border-top border-bottom">
+      <div class="messages" data-issue-subscription-target="messages">
+        <% if @issue.messages.empty? %>
+          <div data-issue-subscription-target="empty">
+            <h6>No replies have been posted to this issue thread.</h6>
+            <p>Be the first one to help the student!</p>
+          </div>
+        <% else %>
           <% @issue.messages.each do |message| %>
             <%= render "messages/message", message: message %>
           <% end %>
-        </div>
+        <% end %>
       </div>
-    <% end %>
-  </div>
-  <div class="message-input mb-4">
-    <%= simple_form_for [@issue, @message], html: { data: { action: "turbo:submit-end->issue-subscription#resetForm" }, class: "" } do |f| %>
-      <%= f.rich_text_area :content,
-                  label: false,
-                  placeholder: "Message ##{@issue.title}",
-                  wrapper_html: {class: "flex-grow-1"}
-                %>
-      <%= f.submit "Reply", class: "btn btn-primary mt-2 mb-3" %>
-    <% end %>
-  </div>
-<% end %>
+    </div>
+    <div class="message-input mb-4">
+      <%= simple_form_for [@issue, @message], html: { data: { issue_subscription_target: "form", action: "turbo:submit-start->issue-subscription#validateForm turbo:submit-end->issue-subscription#resetForm" } } do |f| %>
+        <%= f.rich_text_area :content,
+                    label: false,
+                    placeholder: "Message ##{@issue.title}",
+                    wrapper_html: {class: "flex-grow-1"}
+                  %>
+        <%= f.submit "Reply", class: "btn btn-primary mt-2 mb-3" %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
