--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,7 +1,7 @@
 <!-- Languages column -->
 <div class="row chat-window me-0"
   data-controller="issues-messages">
-  <div class="col-1 border-right border-black lang-column d-flex justify-content-center pt-3">
+  <div class="col-1 lang-column d-flex justify-content-center pt-3">
     <div class="d-flex">
       <%= render "channels/index", channels: @channels, channel: @channel %>
     </div>
