Actually horrendous height clash is now resolved

--- a/app/views/issues/_index.html.erb
+++ b/app/views/issues/_index.html.erb
@@ -1,4 +1,4 @@
-<div class="issue-list">
+<div class="issue-list p-0">
   <div data-controller="search-issues">
     <div class="issue-top mx-3 position-relative">
       <h4>Open Issues</h4>
