--- a/app/assets/stylesheets/components/_issue_list.scss
+++ b/app/assets/stylesheets/components/_issue_list.scss
@@ -1,7 +1,7 @@
 .issue-list {
-  overflow-y: auto;
-  height: 90vh;
+  overflow-y: scroll;
   overflow-x: hidden;
+  height: 88vh;
 }
 
 .dark-mode {
